name:
  servant-openapi
version:
  0.1.0
synopsis:
  Generates the OpenAPI definition for your Servant API
description:
  Generates the OpenAPI 3.0.3 definition for your Servant API.

  For examples and further information see <https://github.com/felixmulder/servant-openapi the README>.
bug-reports:
  https://github.com/felixmulder/servant-openapi
cabal-version:
  1.24
license:
  BSD3
license-file:
  LICENSE
author:
  Felix Mulder, Cliff Harvey
maintainer:
  felix.mulder@gmail.com, cs.hbar+hs@gmail.com
copyright:
  Felix Mulder, Cliff Harvey
category:
  Web, Servant, OpenAPI
build-type:
  Simple
extra-source-files:
    README.md
  , CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/felixmulder/servant-openapi.git

library
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDeriving
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall
    -Wredundant-constraints
    -fhide-source-paths
    -- -Wmissing-deriving-strategies – commented out for GHC 8.6

  exposed-modules:
    Servant.OpenAPI
    Servant.OpenAPI.Internal

  build-depends:
      aeson                     >= 1.4.0    && < 1.6
    , aeson-deriving            >= 0.1.1    && < 0.2
    , base                      >= 4.9      && < 5
    , containers                >= 0.6      && < 0.7
    , hedgehog                  >= 0.6      && < 1.1
    , unordered-containers
    , generic-lens              >= 1.0      && < 2.1
    , lens                      >= 4.17     && < 4.20
    , servant                   >= 0.16     && < 0.19
    , text                      >= 1.2      && < 1.3
    , yaml
    , openapi

  hs-source-dirs:
    src

  default-language:
    Haskell2010

test-suite servant-openapi-tests
  type:
    exitcode-stdio-1.0

  default-language:
    Haskell2010

  main-is:
    Main.hs

  ghc-options:
    -Wall -Wredundant-constraints -fhide-source-paths -threaded

  hs-source-dirs:
    test

  other-modules:

  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDeriving
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  build-depends:
      servant-openapi

    , aeson                     >= 1.4  && < 1.5
    , aeson-deriving            >= 0.1  && < 0.2
    , containers                >= 0.6  && < 0.7
    , openapi
    , lens                      >= 4.17 && < 4.20
    , servant-openapi
    , base                      >= 4.9  && < 5
    , bytestring                >= 0.10 && < 0.11
    , hedgehog                  >= 0.6  && < 1.1
    , servant                   >= 0.16 && < 0.18
    , text                      >= 1.2  && < 1.3
    , yaml                      >= 0.11 && < 0.12
